fix docs and initalize auth
